{
  "version": 4,
  "terraform_version": "1.1.1",
  "serial": 149,
  "lineage": "1115a380-9a70-fea4-69c0-3ceed2552ea3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:744965948494:instance/i-010d5c7fec33bc6a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010d5c7fec33bc6a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c3d869e9238d9ec4",
            "private_dns": "ip-172-31-94-149.ec2.internal",
            "private_ip": "172.31.94.149",
            "public_dns": "ec2-3-82-225-3.compute-1.amazonaws.com",
            "public_ip": "3.82.225.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd8272f923c751da",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0139dd407f151cd95",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-080ba1d63c0c6b11a"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744965948494:internet-gateway/igw-056bc0576d143416a",
            "id": "igw-056bc0576d143416a",
            "owner_id": "744965948494",
            "vpc_id": "vpc-0c5ce313dcf64677b"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peeraccess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "192.168.240.0/21",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02ee900cfa32d01953936444594",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02ee900cfa32d0195",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0b316cf75043b1310"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary",
            "aws_vpc_peering_connection_accepter.peer",
            "mongodbatlas_network_container.atlas_container",
            "mongodbatlas_network_peering.aws-atlas",
            "mongodbatlas_project.aws_atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "primary-internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-056bc0576d143416a",
            "id": "r-rtb-02ee900cfa32d01951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02ee900cfa32d0195",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.primary",
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "primary_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744965948494:security-group/sg-00e72bd03dfcb7776",
            "description": "Default security group for all instances in vpc-0c5ce313dcf64677b",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e72bd03dfcb7776",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-20220325232129468900000001",
            "name_prefix": "default-",
            "owner_id": "744965948494",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c5ce313dcf64677b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744965948494:subnet/subnet-0a311ac6736c1dbe6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a311ac6736c1dbe6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "744965948494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c5ce313dcf64677b"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744965948494:vpc/vpc-0c5ce313dcf64677b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0b5d5ae7f59b4b9b6",
            "default_route_table_id": "rtb-02ee900cfa32d0195",
            "default_security_group_id": "sg-0e90a7d60b4fbcb0d",
            "dhcp_options_id": "dopt-07de8a4ac6b5ab793",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c5ce313dcf64677b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ee900cfa32d0195",
            "owner_id": "744965948494"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "auto_accept": true,
            "id": "pcx-0b316cf75043b1310",
            "peer_owner_id": "894638218152",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-04b928f9e2940a3dd",
            "vpc_id": "vpc-0c5ce313dcf64677b",
            "vpc_peering_connection_id": "pcx-0b316cf75043b1310"
          },
          "dependencies": [
            "aws_vpc.primary",
            "mongodbatlas_network_container.atlas_container",
            "mongodbatlas_network_peering.aws-atlas",
            "mongodbatlas_project.aws_atlas"
          ]
        }
      ]
    }
  ]
}